--- a/.env-sample
+++ b/.env-sample
@@ -2,7 +2,7 @@ PORT=<Порт на котором работает приложение>
 DB_URI=<адрес базы данных>
 GOOGLE_CLIENT_ID=<клиентский айди гугла для авторизации через гугл>
 GOOGLE_CLIENT_SECRET=<секретный код гугла для авторизации через гугл>
-GOOGLE_CALLBACK_URI=<адрес колбека для авторизации через гугл>
+GOOGLE_CALLBACK_URI=<ваш URI>/google/callback
 GITHUB_CLIENT_ID=<секретный код гугла для авторизации через гитхаб>
 GITHUB_CLIENT_SECRET=<адрес колбека для авторизации через гитхаб>
-GITHUB_CALLBACK_URI==<адрес колбека для авторизации через гитхаб>
+GITHUB_CALLBACK_URI==<ваш URI>/github/callback
