--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.8.1",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.16.1",
     "easymde": "^2.13.0",
     "eslint": "^7.15.0",
